--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
         <h1>おみくじ</h1>
         <% if params['act'] != nil %>
             <% fortune = ['大吉', '吉', '中吉', '小吉', '末吉', '凶'] %>
-            <% result = fortune[rand(0.5)] %>
+            <% result = fortune[rand(0..5)] %>
         <% else %>
             <% result = 'ありません' %>
         <% end %>
